--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # React Native - Input, Add, Delete and Modal.
 
-Link Expo.Io: [RN - MODAL](https://snack.expo.io/@git/github.com/FacundoF1/rn-modal)
+Link Expo.Io: [RN - MODAL](https://snack.expo.io/@facundof1/github.com-facundof1-rn-modal)
